--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,10 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../Styles/index.css">
     <title>SenStore | Home</title>
 </head>
 
 <body>
+    <!-- Header -->
+    <div class="header">
+        <div class="logo">
+            <image src="../Image/logo.jpg" height="50px" width="50px" />
+        </div>
+    </div>
+
+    <!-- Background-parallex -->
+
+
+    <!-- Login-Form -->
+
+
+    <!-- Footer -->
 
 </body>
 
