--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>SenStore | Home</title>
 </head>
 
 <body>
     <!-- Header -->
     <div class="header">
-        <div class="logo">
-            <image src="../Image/logo.jpg" height="50px" width="50px" />
+        <a href="#default" class="logo">
+            <b>SenStore</b>
+        </a>
+        <div class="header-right">
+            <a class="active" href="#home">Home</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
         </div>
     </div>
 
