--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Styles/index.css">
+    <script src="../Script/index.js" type="text/javascript"></script>
+    <link rel="shortcut icon" href="../Image/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>SenStore | Home</title>
 </head>
@@ -13,9 +15,10 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <a href="#default" class="logo">
-            <b>SenStore</b>
+        <a href="#">
+            <img src="../Image/logo.jpg" class="logo-image" height="50px" width="50px">
         </a>
+        <span class="logo">SenStore</span>
         <div class="header-right">
             <a class="active" href="#home">Home</a>
             <a href="#contact">Contact</a>
@@ -23,7 +26,17 @@
         </div>
     </div>
 
-    <!-- Background-parallex -->
+    <!-- Background-image-carousel -->
+
+    <div id="slider">
+        <figure>
+            <img src="../Image/bg-1.jpg" width="100%" height="530px">
+            <img src="../Image/bg-2.jpg" width="100%" height="530px">
+            <img src="../Image/bg-3.jpg" width="100%" height="530px">
+            <img src="../Image/bg-4.jpg" width="100%" height="530px">
+            <img src="../Image/bg-5.jpg" width="100%" height="530px">
+        </figure>
+    </div>
 
 
     <!-- Login-Form -->
