--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Styles/index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="../Script/index.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="../Image/logo.jpg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>SenStore | Home</title>
 </head>
 
@@ -36,13 +37,23 @@
             <img src="../Image/bg-4.jpg" width="100%" height="530px">
             <img src="../Image/bg-5.jpg" width="100%" height="530px">
         </figure>
+
+        <!-- Login-Form -->
+
+        <div class="login">
+            <form action="./shop.html">
+                <p class="h4 mb-4 sign-in">Sign in</p>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Email"><br />
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Password"><br />
+                </div>
+                <input type="submit" class="btn btn-primary" value="Login">
+            </form>
+        </div>
+
     </div>
-
-
-    <!-- Login-Form -->
-
-
-    <!-- Footer -->
 
 </body>
 
