Home page + Login done

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -50,7 +50,7 @@
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Password" id="password"><br />
                 </div>
-                <input type="submit" class="btn btn-primary" value="Login" onclick="validateUser()">
+                <input type="submit" class="btn btn-primary" value="Login" onclick="validateUser()"><br /><br />
                 <div class="form-group">
                     <p id="userAuth"></p>
                 </div>
