--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -33,6 +33,17 @@
         </div>
     </div>
 
+    <!-- Navbar -->
+
+    <div class="navClass">
+        <ul class="navTabs">
+            <li>Electronics</li>
+            <li>Fashion</li>
+            <li>Watch</li>
+            <li>Sports</li>
+        </ul>
+    </div>
+
 </body>
 
 </html>
