--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -11,12 +11,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="../Script/index.js" type="text/javascript"></script>
+    <script src="../Script/shop.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="../Image/logo.jpg">
     <title>SenStore | Shop</title>
 </head>
 
-<body>
+<body onload="bringProducts()">
     <!-- Header -->
     <div class="header">
         <a href="#">
