Shop categories done. + product data added..

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -70,6 +70,12 @@
         </ul>
     </div>
 
+    <div class="container">
+        <div class="card" style="width:600px">
+            <img class="card-img-top" src="../Image/bg-1.jpg" alt="Card image" style="width:100%">
+        </div>
+    </div>
+
 </body>
 
 </html>
