Shop categories done. + product data added..

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -39,7 +39,7 @@
         <ul class="navTabs">
             <li class="electronics">Electronics
                 <ul class="drop-electronics">
-                    <li id="mobile">Mobile</li>
+                    <li id="mobile" onclick="selectMobile()">Mobile</li>
                     <li id="laptop">Laptop</li>
                     <li id="television">Television</li>
                     <li id="camera">Camera</li>
