Shop categories done. + product data added + dynamic categories started

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -36,8 +36,8 @@
     <!-- Navbar -->
 
     <div class="navClass">
-        <ul class="navTabs">
-            <li class="electronics">Electronics
+        <ul class="navTabs" id="navTabs">
+            <!-- <li class="electronics">Electronics
                 <ul class="drop-electronics">
                     <li id="mobile" onclick="selectMobile()">Mobile</li>
                     <li id="laptop">Laptop</li>
@@ -66,7 +66,7 @@
                     <li id="racquet">Racquet</li>
                     <li id="accessories">Accessories</li>
                 </ul>
-            </li>
+            </li> -->
         </ul>
     </div>
 
