Shop categories done. + product data added + dynamic categories done

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -36,38 +36,7 @@
     <!-- Navbar -->
 
     <div class="navClass">
-        <ul class="navTabs" id="navTabs">
-            <!-- <li class="electronics">Electronics
-                <ul class="drop-electronics">
-                    <li id="mobile" onclick="selectMobile()">Mobile</li>
-                    <li id="laptop">Laptop</li>
-                    <li id="television">Television</li>
-                    <li id="camera">Camera</li>
-                    <li id="headphone">Headphone</li>
-                </ul>
-            </li>
-            <li class="fashion">Fashion
-                <ul class="drop-fashion">
-                    <li id="women">Women</li>
-                    <li id="men">Men</li>
-                </ul>
-            </li>
-            <li class="watch">Watch
-                <ul class="drop-watch">
-                    <li id="men-watch">Men</li>
-                    <li id="women-watch">Women</li>
-                    <li id="smartwatch">Smartwatch</li>
-                </ul>
-            </li>
-            <li class="sports">Sports
-                <ul class="drop-sports">
-                    <li id="cricket">Cricket</li>
-                    <li id="football">Football</li>
-                    <li id="racquet">Racquet</li>
-                    <li id="accessories">Accessories</li>
-                </ul>
-            </li> -->
-        </ul>
+        <ul class="navTabs" id="navTabs"></ul>
     </div>
 
 </body>
