Shop categories done. + product data added + dynamic categories done

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -24,11 +24,18 @@
         </a>
         <span class="logo">SenStore</span>
         <div class="header-right icons">
+            <a href="#">
+                <i class="fa fa-user-circle-o" id="user"></i>
+                <span id="user-name"></span>
+            </a>
             <a href="#wishList">
-                <i class="fa fa-heart" id="wishlist"></i>
+                <i class="fa fa-heart" title="View Wishlist" id="wishlist"></i>
             </a>
             <a href="#cart">
-                <i class="fa fa-shopping-cart" id="cart"></i>
+                <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-sign-out" title="Log out" id="logout"></i>
             </a>
         </div>
     </div>
