shop page side panel started

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -46,6 +46,12 @@
         <ul class="navTabs" id="navTabs"></ul>
     </div>
 
+    <!-- Side panel for filter -->
+
+    <div class="side-panel">
+
+    </div>
+
 </body>
 
 </html>
