Filter drop-down static done..

--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -49,7 +49,15 @@
     <!-- Side panel for filter -->
 
     <div class="side-panel">
-
+        <ul id="panel-tabs">
+            <li onclick="displayFilter()">RAM</li>
+            <div id="sub-panel">
+                <input type="checkbox" name="RAM" value="2gb"> 2GB<br />
+                <input type="checkbox" name="RAM" value="4gb"> 4GB
+            </div>
+            <!-- </li> -->
+            <li>RAM</li>
+        </ul>
     </div>
 
 </body>
