--- a/HTML/home.html
+++ b/HTML/home.html
@@ -32,7 +32,7 @@
             <a href="#wishList">
                 <i class="fa fa-heart" title="View Wishlist" id="wishlist"></i>
             </a>
-            <a href="#cart">
+            <a href="./cart.html">
                 <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
             </a>
             <a href="#">
