--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../Styles/index.css">
     <link rel="stylesheet" href="../Styles/shop.css">
+    <link rel="stylesheet" href="../Styles/item.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="../Script/shop.js" type="text/javascript"></script>
+    <script src="../Script/cart.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="../Image/logo.jpg">
-    <title>SenStore | Shop</title>
+    <title>SenStore | Cart</title>
 </head>
 
 <body onload="bringProducts()">
@@ -46,22 +47,27 @@
         <ul class="navTabs" id="navTabs"></ul>
     </div>
 
-    <!-- Side panel for filter -->
+    <div class="container">
+        <div id="cart-list">
+        </div>
 
-    <div class="side-panel">
-        <ul id="panel-tabs">
-            <li onclick="displayFilter()">RAM</li>
-            <div id="sub-panel">
-                <input type="checkbox" name="RAM" value="2gb"> 2GB<br />
-                <input type="checkbox" name="RAM" value="4gb"> 4GB
-            </div>
-            <!-- </li> -->
-            <li>RAM</li>
-        </ul>
-    </div>
+        <div id="check-out">
+            <table id="pay">
+                <tr>
+                    <th>Total</th>
+                    <th>Rs. <span id="total"></span></th>
+                </tr>
+                <tr class="pad-btn">
+                    <td>
+                        <input type="button" class="btn btn-success" id="go-back" value="Continue Shopping" onclick="addToCart()" />
+                    </td>
+                    <td>
+                        <input type="button" class="btn btn-primary" id="buy" value="Checkout" onclick="addToCart()" />
+                    </td>
+                </tr>
+            </table>
+        </div>
 
-    <!-- DISPLAY -->
-    <div id="display">
     </div>
 
 </body>
