--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -36,7 +36,7 @@
                 <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
             </a>
             <a href="#">
-                <i class="fa fa-sign-out" title="Log out" id="logout"></i>
+                <i class="fa fa-sign-out" title="Log out" id="logout" onclick="logOut()"></i>
             </a>
         </div>
     </div>
@@ -59,10 +59,10 @@
                 </tr>
                 <tr class="pad-btn">
                     <td>
-                        <input type="button" class="btn btn-success" id="go-back" value="Continue Shopping" onclick="addToCart()" />
+                        <input type="button" class="btn btn-success" id="go-back" value="Continue Shopping" onclick="goBack()" />
                     </td>
                     <td>
-                        <input type="button" class="btn btn-primary" id="buy" value="Checkout" onclick="addToCart()" />
+                        <input type="button" class="btn btn-primary" id="buy" value="Checkout" onclick="buyNow()" />
                     </td>
                 </tr>
             </table>
