--- a/HTML/home.html
+++ b/HTML/home.html
@@ -36,7 +36,7 @@
                 <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
             </a>
             <a href="#">
-                <i class="fa fa-sign-out" title="Log out" id="logout"></i>
+                <i class="fa fa-sign-out" title="Log out" id="logout" onclick="logOut()"></i>
             </a>
         </div>
     </div>
