--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -50,13 +50,13 @@
 
     <div class="side-panel">
         <ul id="panel-tabs">
-            <li onclick="displayFilter()">RAM</li>
+            <!-- <li onclick="displayFilter()">RAM</li>
             <div id="sub-panel">
                 <input type="checkbox" name="RAM" value="2gb"> 2GB<br />
                 <input type="checkbox" name="RAM" value="4gb"> 4GB
-            </div>
+            </div> -->
             <!-- </li> -->
-            <li>RAM</li>
+            <!-- <li>RAM</li> -->
         </ul>
     </div>
 
