--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -28,9 +28,9 @@
                 <i class="fa fa-user-circle-o" id="user"></i>
                 <span id="user-name"></span>
             </a>
-            <a href="#wishList">
+            <!-- <a href="#wishList">
                 <i class="fa fa-heart" title="View Wishlist" id="wishlist"></i>
-            </a>
+            </a> -->
             <a href="./cart.html">
                 <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
             </a>
@@ -50,13 +50,6 @@
 
     <div class="side-panel">
         <ul id="panel-tabs">
-            <!-- <li onclick="displayFilter()">RAM</li>
-            <div id="sub-panel">
-                <input type="checkbox" name="RAM" value="2gb"> 2GB<br />
-                <input type="checkbox" name="RAM" value="4gb"> 4GB
-            </div> -->
-            <!-- </li> -->
-            <!-- <li>RAM</li> -->
         </ul>
     </div>
 
