--- a/HTML/home.html
+++ b/HTML/home.html
@@ -29,9 +29,9 @@
                 <i class="fa fa-user-circle-o" id="user"></i>
                 <span id="user-name"></span>
             </a>
-            <a href="#wishList">
+            <!-- <a href="#wishList">
                 <i class="fa fa-heart" title="View Wishlist" id="wishlist"></i>
-            </a>
+            </a> -->
             <a href="./cart.html">
                 <i class="fa fa-shopping-cart" title="View Cart" id="cart"></i>
             </a>
