--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,14 +17,14 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <a href="#">
+        <a href="./index.html">
             <img src="../Image/logo.jpg" class="logo-image" height="50px" width="50px">
         </a>
         <span class="logo">SenStore</span>
         <div class="header-right">
-            <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a class="active" href="./index.html">Home</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./about.html">About</a>
         </div>
     </div>
 
