filter works with bug.. rest is complete

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -30,8 +30,8 @@
 
     <div class="center-div container">
         <h3>
-            SenStore is an online shopping cart developed for learning and educational purpose.<br /><br />
-            It has no relevance with business or marketing of any brand.<br /><br />
+            SenStore is an online shopping cart developed for educational purpose.<br /><br />
+            It has no connection with business or marketing of any brand.<br /><br />
             All data in this application have been taken from <u>Flipkart</u>.
         </h3>
     </div>
