admin module integrated

--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="content">
-        <input type="search" id="searchId" placeholder="Search.." class="form-control" /><br />
+        <input type="search" id="searchId" placeholder="Search.." class="form-control" onkeypress="return searchItem(event)" /><br />
 
         <button id="add" class="form-control" title="Add Product">+ Add</button>
 
