admin module completed

--- a/HTML/admin.html
+++ b/HTML/admin.html
@@ -34,7 +34,8 @@
     <div class="content">
         <input type="search" id="searchId" placeholder="Search.." class="form-control" onkeypress="return searchItem(event)" /><br />
 
-        <button id="add" class="form-control" title="Add Product">+ Add</button>
+        <button id="add" class="form-control" title="Add Product" onclick="addProduct()" data-toggle="modal"
+            data-target="#myModal">+ Add</button>
 
         <table class=" table table-striped" id="adminData">
             <thead>
@@ -51,6 +52,65 @@
 
             </tbody>
         </table>
+
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Updata Data</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="mContent">
+                        <table class="modalTab">
+                            <tbody id="modalData">
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="addDetails()">Add product</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Updata Data</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="mContent">
+                        <table class="modalTab">
+                            <tbody id="modalData2">
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" onclick="saveDetails()">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- JS code -->
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+        </script>
+
     </div>
 
 </body>
